inc/meta-boxes/assets/scss/meta-boxes.scss
#colormag-page-setting {

	.inside {
		margin: 0;
		padding: 0;
	}

	#page-settings-tabs-wrapper {
		display: flex;
	}

	.colormag-ui-nav {
		width: 180px;
		list-style-type: none;
		background-color: #fafafa;
		border-right: 1px solid #eeeeee;
		margin: 0;
		padding: 0;

		li {
			margin: 0;
			outline: none;

			a {
				display: block;
				padding: 10px;
				text-decoration: none;
				border-bottom: 1px solid #eeeeee;
				color: #252525;

			}

			&.ui-tabs-active {

				a {
					background: #ffffff;
					margin-right: -1px;
				}
			}
		}
	}

	.colormag-ui-content {
		padding: 0 20px;
		width: calc(100% - 180px);

		.options-group {
			padding: 15px 0;
			border-bottom: 1px solid #eeeeee;
			display: flex;
		}

		.colormag-ui-desc,
		.colormag-ui-field {
			flex: 1;
		}

		.colormag-ui-desc {
			> label {
				display: block;
			}
		}

		.colormag-label {

			input[type="radio"] {
				display: none;
			}

			input {

				&:checked + img {
					box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.25);
					border: 1px solid #13a1dc;
				}
			}
		}
	}
}

